Implemented "add to loadout" functionality